# Macro-Creator

./: build-main.py  build.py  help.config  main-copy.py  main.py  pyproject.toml  requirements.txt
core/: main
